# prng_benchmark

./: Cargo.toml  README.md
benches/: random.rs
src/: lib.rs  nightly_tls.rs  stable_tls.rs
