[package]
name = "prng_benchmark"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
getrandom = "0.2"

[dev-dependencies]
criterion = "~0.3.5"

[[bench]]
name = "random"
harness = false

[profile.bench]
opt-level = 3
codegen-units = 1
lto = "fat"


[profile.test]
opt-level = 3
codegen-units = 1
lto = "fat"
